Implemented additional events for `OnUserJoin` and `OnUserPart`, including handling the `NAMES` list

--- a/TwitchIRC.Commands/TwitchIRC.Commands.csproj
+++ b/TwitchIRC.Commands/TwitchIRC.Commands.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TwitchIRC\TwitchIRC.Core.csproj" />
+    <ProjectReference Include="..\TwitchIRC.Core\TwitchIRC.Core.csproj" />
   </ItemGroup>
 
 </Project>
