--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /TwitchIRC.Tests/appsettings.json
+/TwitchIRC.Sample/appsettings.json
